[package]
name = "homepage"
version = "0.1.0"
authors = ["Erencan Kanmaz <ekanmaz@bol.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }

# Debug
dioxus-logger = "0.5.1"
